--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Build project
         run: npm run build
 
+      - name: Copy CNAME to dist folder
+        run: cp CNAME ./dist
+
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v3
         with:
